--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
-  <script src="js/main.js"></script>
+  <script src="js/main2.js"></script>
 
-<canvas id="canvas" width="1000" height="500"></canvas><br>
+<canvas id="canvas" width="900" height="500"></canvas><br>
 <button type="button" onclick="start()">Start</button><br>
 <button type="button" onclick="stop()">Stop</button>
 
